Fix: Remove scrollbar color #299

--- a/userContent.css
+++ b/userContent.css
@@ -678,7 +678,6 @@
       --color-moz-inverse-bg: var(red) !important;
       --focus-shadow: 0 0 0 4px color-mix(in srgb, var(--in-content-primary-button-background) 30%, transparent),
         0 0 0 2px var(--in-content-primary-button-background-active);
-      scrollbar-color: var(--in-content-deemphasized-text) var(--in-content-page-background);
     }
     .warning {
       --color-link: rgb(55, 255, 255) !important;
